# hepara-discord

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  hepara-README.md  hepara-discord.py  mcp_config.example.json  pyproject.toml
docker/: README.md  hepara-entrypoint.sh
hepara/: agent.py  bot.py  bot_commands.py  bot_tasks.py  prompt.py
hepara/subagents/arxiv_agent/: agent.py  prompt.py  tools.py
hepara/subagents/faq_agent/: agent.py  prompt.py  tools.py
hepara/subagents/inspirehep_agent/: agent.py  prompt.py  tools.py
hepara/subagents/mcp_agent/: agent.py  prompt.py  subagents.py  tools.py
hepara/subagents/pdg_agent/: agent.py  prompt.py  tools.py
hepara/subagents/skills_agent/: agent.py  prompt.py  subagents.py  tools.py
tests/: test_bot_session_routing.py  test_daily_keyword_filter.py  test_download_pdf.py  test_mcp_agent.py  test_paper_helpers.py  test_read_paper.py  test_recommend_by_trends.py  test_recommend_by_trends_backend.py  test_search_papers.py  test_skills_agent.py
utils/: categories.py  mcp_helpers.py  paper_helpers.py  skill_helpers.py
