[project]
name = "hepara-discord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxivflow>=0.3.0",
    "chromadb>=1.5.9",
    "discord-py>=2.7.1",
    "google-adk>=2.4.0",
    "google-genai>=2.11.0",
    "greenlet>=3.5.3",
    "langchain-text-splitters>=1.1.2",
    "mcp[cli]>=1.28.1",
    "pandas>=3.0.3",
    "pdg>=2026.0",
    "pymupdf4llm>=1.28.0",
    "python-dotenv>=1.2.2",
]
